--- a/index.html
+++ b/index.html
@@ -1,7 +1,74 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Olá sou Emerson Mockaites</h1>
-<p>Estou disponível em (11) 99236-8141</p>
-</body>
+<html
+  xmlns="http://www.w3.org/1999/xhtml" lang="pt">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="robots" content="eletrecista, segurança eletrônica, São Paulo, Grande ABC" />
+    <title>Mockbras Soluções</title>
+    <link rel="stylesheet" type="text/css" media="all" href="resources/consolidated.css" />
+  </head>
+  <body>
+    <header class="hero" id="hero">
+      <div class="hero-background"></div>
+      <div class="hero-overlay"></div>
+      <h1 class="hero-title">
+        Mockbras Solu&ccedil;&otilde;es
+        <em>El&eacute;trica & Seguran&ccedil;a Eletr&ocirc;nica</em>
+      </h1>
+    </header>
+    <div class="content">
+      <section class="main" style="position: relative;">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 main">
+              <div id='whats' class='stacks_out'>
+                <div id='whats_in' class='stacks_in com_yourhead_stack_button_stack'>
+                  <div id='whats_in_button'>
+                    <a href="https://wa.me/5511992368141" target="_blank">WhatsApp</a>
+                  </div>
+                </div>
+              </div>
+              <div id='face' class='stacks_out'>
+                <div id='face_in' class='stacks_in com_yourhead_stack_button_stack'>
+                  <div id='face_in_button'>
+                    <a href="https://www.facebook.com/pg/Mockbras-solu&ccedil;&otilde;es-2080867568817307" target="_blank">Facebook</a>
+                  </div>
+                </div>
+              </div>
+              <div id='insta' class='stacks_out'>
+                <div id='insta_in' class='stacks_in com_yourhead_stack_button_stack'>
+                  <div id='insta_in_button'>
+                    <a href="https://www.instagram.com/mockbras_solucoes" target="_blank">Instagram</a>
+                  </div>
+                </div>
+              </div>
+              <div id='email' class='stacks_out'>
+                <div id='email_in' class='stacks_in com_yourhead_stack_button_stack'>
+                  <div id='email_in_button'>
+                    <a href="mailto:contato@mockbras.com.br" target="_blank">E-mail</a>
+                  </div>
+                </div>
+              </div>
+              <h1 id="missão">Missão</h1>
+              <p>Entender o nosso cliente, para que possamos de forma ágil e técnica, satisfazer a sua necessidade, com uma excelente oferta de serviços, proporcionando assim que sonhos e projetos sejam realizados.</p>
+              <h1 id="visão">Visão</h1>
+              <p>Melhorar ainda mais nosso atendimento, detalhar processos e qualificar ainda mais nosso atendimento, conseguindo assim ser a assistência mais lembrada pelo nossos clientes.</p>
+              <h1 id="valores">Valores</h1>
+              <p><b>Ética:</b> agindo com honestidade e transparência em todas as ocasiões.</p>
+              <p><b>Respeito:</b> por nós mesmos, pelo meio ambiente e em todas as etapas de negociação e execução do serviço.</p>
+              <p><b>União:</b> somos muito mais do que colegas de trabalho, somos uma família.</p>
+              <p><b>Paixão pela Qualidade:</b> prezando pela excelência em nossos serviços, processos e principalmente em nosso atendimento.</p>
+              <p><b>Melhoria contínua:</b> buscando estar sempre um passo a frente da concorrência, proporcinonando o melhor para nossos fornecedores, clientes e colaboradores.</p>
+              <blockquote>
+                <p>&quot;Pense constantemente sobre como você pode fazer as coisas melhor e questione a si mesmo.&quot; - Elon Musk</p>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+    <script type="text/javascript" src="resources/main.js"></script>
+  </body>
 </html>
